@@ -1,1 +1,0 @@
-API_EXPORT(int) mime_find_ct(request_rec *r);
